[tool.poetry]
name = "dinero"
version = "0.1.4"
description = "Dinero is a library for working with monetary values in Python."
license = "MIT"
authors = ["Carlos Montecinos Geisse <carlos@pythoncheatsheet.org>"]
readme = "README.md"
repository = "https://github.com/wilfredinni/dinero"
keywords = ["python3", "money", "decimals", "calculations", "currency"]

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
ipykernel = "^6.16.0"
pandas = "^1.5.0"
coverage = "^6.5.0"
nbconvert = "^7.2.2"
pytest-cov = "^4.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-material = "^8.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
