[tool.poetry]
name = "dinero"
version = "0.3.0"
description = "Dinero is a library for working with monetary values in Python."
license = "MIT"
authors = ["Carlos Montecinos Geisse <carlos@pythoncheatsheet.org>"]
readme = "README.md"
repository = "https://github.com/wilfredinni/dinero"
keywords = ["python3", "money", "decimals", "calculations", "currency"]

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.1"
ipykernel = "^6.16.0"
pandas = "^2.0.0"
coverage = "^7.0.0"
pytest-cov = "^4.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-material = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
